[package]
name = "programming-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
num = "0.4.0"
regex = "1"
lazy_static = "1"
unicode-normalization = "0.1.21"
time = "0.3"
reqwest = { version = "0.11.11", features = [ "blocking" ] }
